force-app/main/default/objects/Config__c/Config__c.object-meta.xml
<CustomObject>
    <description>This is the object to store the available configs.</description>
    <label>Config</label>
    <nameField>
        <label>Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>